--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,16 +1,20 @@
 <div class="login-page" [@routerTransition]>
     <div class="row justify-content-md-center">
         <div class="col-xs-12 col-sm-12 col-md-7 col-lg-5 col-xl-4">
-
             <div *ngIf="!isShowingThankYou">
                 <h1>Try it for free. Just leave your email and tell me what you need</h1>
                 <form id="signupForm" ngForm role="form" (ngSubmit)="onSubmit(signupForm)" #signupForm="ngForm">
                     <div class="form-content">
                         <div class="form-group">
-                            <input [(ngModel)]="email" name="email"
+                            <label for="email" class="form-label">Email address</label>
+                            <input [(ngModel)]="email"
+                                   name="email"
                                    required
-                                   id="email" tabindex="0" type="text" placeholder="Email"
-                                   class="form-control input-underline input-lg"
+                                   autofocus
+                                   id="email"
+                                   tabindex="0"
+                                   type="text"
+                                   class="form-control input"
                                    [class.is-invalid]="isEmailInvalid"
                                    (input)="onEmailInput()">
                             <div class="invalid-feedback">
@@ -18,20 +22,29 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <input [(ngModel)]="questionOne" name="questionOne"
+                            <label for="question1" class="form-label">
+                                What would the perfect cryptocurrency site do for you?
+                            </label>
+                            <input [(ngModel)]="questionOne"
+                                   name="questionOne"
                                    required
-                                   id="question1" type="text"
-                                   class="form-control input-underline input-lg"
-                                   placeholder="What takes you the most time or is inconvenient for you?"
+                                   id="question1"
+                                   type="text"
+                                   class="form-control input"
+                                   placeholder="answer"
                                    [class.is-invalid]="isQuestionOneInvalid"
                                    (input)="onQuestionOneInput()">
                             <div class="invalid-feedback">
                                 Provide an answer
                             </div>
                         </div>
-                        <div class="form-group">
-                            <input id="question2" type="text" class="form-control input-underline input-lg"
-                                   placeholder="Functionality related to cryptocurrencies you need is..?">
+                        <div class="form-group d-none">
+                            <label for="question2" class="form-label">
+                                Functionality related to cryptocurrencies you need is..?
+                            </label>
+                            <input id="question2"
+                                   type="text"
+                                   class="form-control input">
                         </div>
                     </div>
                     <button type="submit" [disabled]="isSubmitInProgress"
