--- a/src/app/layout/arbitrage-monitor/two-leg-arbitrage-opportunities-table/two-leg-arbitrage-opportunities-table.component.html
+++ b/src/app/layout/arbitrage-monitor/two-leg-arbitrage-opportunities-table/two-leg-arbitrage-opportunities-table.component.html
@@ -1,6 +1,6 @@
-<div class="col-12">
-    <div>
-        Showing {{profitOpportunities.length}} of {{totalNumberOfUnfilteredOpportunities}} opportunities
+<div class="col-12 mb-1">
+    <div class="mb-1">
+        {{profitOpportunities.length}} opportunities <ng-container *ngIf="isAnyOpportunityFilteredOut()">({{howManyFilteredOutOpportunities()}} filtered out)</ng-container>
     </div>
     <div class="table-responsive">
         <table class="table table-striped table-hover">
