Show second question on signup page

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -38,7 +38,7 @@
                                 Provide an answer
                             </div>
                         </div>
-                        <div class="form-group d-none">
+                        <div class="form-group">
                             <label for="question2" class="form-label">
                                 Functionality related to cryptocurrencies you need is..?
                             </label>
