--- a/src/app/layout/health/health.component.html
+++ b/src/app/layout/health/health.component.html
@@ -1,6 +1,10 @@
 <div *ngFor="let exchangeHealthCategory of healthCategories()" class="row mb-4">
     <div class="col-12">
-        <h2>{{exchangeHealthCategory}}</h2>
+        <h2>{{exchangeHealthCategory}}
+            <ng-container *ngIf="exchangesHealth.get(exchangeHealthCategory).length > 0">
+                ({{exchangesHealth.get(exchangeHealthCategory).length}})
+            </ng-container>
+        </h2>
         <div *ngIf="hasNoExchangesInCategory(exchangeHealthCategory)">
             <h3>Empty</h3>
         </div>
