Add reset password screen

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,31 @@
 <div class="login-page" [@routerTransition]>
     <div class="row justify-content-md-center">
-        <div class="col-md-4">
+        <div class="col-xs-12 col-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar"/>
             <h1>Autocoin</h1>
             <form ngForm role="form" (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
                 <div class="form-content">
                     <div>
                         <div class="form-group">
-                            <input ngModel type="text" name="email" class="form-control input-underline input-lg"
+                            <input ngModel
+                                   type="text"
+                                   name="email"
+                                   class="form-control input-underline input-lg"
                                    id="email"
-                                   placeholder="Email" required email>
+                                   placeholder="Email"
+                                   autofocus
+                                   required
+                                   email>
                         </div>
 
                         <div class="form-group">
-                            <input ngModel type="password" name="password" class="form-control input-underline input-lg"
-                                   id="password" placeholder="Password" required>
+                            <input ngModel
+                                   type="password"
+                                   name="password"
+                                   class="form-control input-underline input-lg"
+                                   id="password"
+                                   placeholder="Password"
+                                   required>
                         </div>
                         <div *ngIf="isShowingTwoFactorAuthenticationCodeInput" class="form-group">
                             <div>Please input 2-factor authentication code</div>
@@ -25,11 +36,25 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn rounded-btn" [disabled]="loginForm.invalid">Log in</button>
-                <a class="btn register rounded-btn" [routerLink]="['/signup']">
-                    Sign up for free
-                </a>
+                <div class="d-inline-flex">
+                    <div class="col-6">
+                        <div class="mb-1">
+                            <button type="submit" class="btn rounded-btn" [disabled]="loginForm.invalid">Log in</button>
+                        </div>
+                        <div>
+                            <a [routerLink]="['/reset-password/step-1']">
+                                Forgot your password?
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <a class="btn register rounded-btn" [routerLink]="['/signup']">
+                            Sign up for free
+                        </a>
+                    </div>
+                </div>
             </form>
         </div>
+
     </div>
 </div>
