--- a/src/app/layout/settings/user-account-password/user-account-password.component.html
+++ b/src/app/layout/settings/user-account-password/user-account-password.component.html
@@ -1,5 +1,5 @@
 <div class="card mb-3">
-    <div class="card-header">Your login password</div>
+    <div class="card-header">Your account login & password</div>
     <div class="card-body">
         <div class="row">
             <div *ngIf="shouldChangePassword" class="col is-2 pr-0">
@@ -8,6 +8,10 @@
         </div>
         <div class="row">
             <div class="col is-2 pr-0">
+                <div class="form-group">
+                    <label>Login</label>
+                    <input required type="text" disabled class="form-control" value="{{getLogin()}}">
+                </div>
                 <div class="form-group">
                     <label>Old password</label>
                     <input [(ngModel)]="oldPassword" required type="password" class="form-control">
