--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -24,5 +24,9 @@
             <i class="fa fa-fw fa-cog"></i>&nbsp;{{ 'Settings' | translate }}
         </a>
 
+        <a (click)="logout()" class="list-group-item logout-button">
+            <i class="fa fa-fw fa-power-off"></i>&nbsp;{{ 'Log Out' | translate }}
+        </a>
+
     </div>
 </nav>
